--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                         
                     </div>
                     <div class="col-md">
-                        <p>projem hakkında...</p>
+                        <p>
+                            <a href="https://https://olcayvaro1.github.io/" target="_self">Deneme</a> 
+                        </p>
                     </div>
                     <div class="col-md">
                         <p>gelecek hakkında...</p>
