--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-md">
                         <p>
-                            <a href="https://https://olcayvaro1.github.io/" target="_self">Deneme</a> 
+                            <a href="https://github.com/olcayvaro1" target="_self">Deneme</a> 
                         </p>
                     </div>
                     <div class="col-md">
