--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </p>
                     </div>
                     <div class="col-md">
-                        <p>gelecek hakkında...</p>
+                        <p>the future</p>
                     </div>
                 <section class="services" id="services">
             <div class="container">
