--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                         </p>
                     </div>
                     <div class="col-md">
-                        <p>the future</p>
+                        <p>I want to be a good software developer and work in a good company in the future. In the 
+                            future, I would like to take part in projects in the field of space technologies. Thus, I can 
+                            contribute to the development of faster technologies and artificial intelligence.</p>
                     </div>
                 <section class="services" id="services">
             <div class="container">
