--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <div class="col-md">
                         <p>
                             <a href="https://github.com/olcayvaro1" target="_self">My Github link</a> <br>
+                            <a href="https://drive.google.com/file/d/13lcXdDY3w1VL2coAB3iZmGLmQVQqlYzT/view" target="_self">CV</a>
                             
 
                         </p>
